--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,13 @@ header img {
 header div {
     padding-right: 2rem;
 }
+p {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
 main,
 footer {
     position: relative;
