--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,10 +35,10 @@ header img {
 header div {
     padding-right: 2rem;
 }
-p {
+.pcb {
     display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
+    margin-block-start: 1rem;
+    margin-block-end: 1rem;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
 }
