--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,9 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    overflow: hidden;
+    position: fixed;
+    background-color: white;
 }
 header li {
     display: inline;
