--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,27 +1,33 @@
+html, body {
+  height: 100%;
+  width: 100%;
+  font-family: "Open Sans", sans-serif;
+}
 * {
-    margin: 0;
-    padding: 0;
-    font-family: "0pen Sans", sans-serif;
+  padding: 0;
+  margin: 0;
 }
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 header {
-    position: fixed;
-    width: 100%;
-    height: 3rem;
-    z-index: 1;
-    border-bottom: 1px solid black;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    overflow: hidden;
-    position: fixed;
-    background-color: white;
+  height: 3rem;
+  overflow: hidden;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid black;
+  align-items: center;
+}
+header p {
+    padding: 0 2rem;
 }
 header li {
     display: inline;
-    padding: 0 1rem;
+    padding-right: 2rem;
 }
 header a {
     color: black;
@@ -29,40 +35,138 @@ header a {
 header a:hover {
     text-decoration: underline;
 }
-header img {
-    height: 2rem;
-    width: auto;
-    padding: 0 0.5rem;
-    position: relative;
-}
-header div {
-    padding-right: 2rem;
-}
-.pcb {
-    display: block;
-    margin-block-start: 1rem;
-    margin-block-end: 1rem;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    max-width: 40rem;
-}
-main,
-footer {
+main {
     position: relative;
     top: 3rem;
+    height: 200rem;
 }
-main {
-    display: flex;
-    justify-content: center;
+.banner {
+  display: flex;
+  flex-flow: row;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
-main img {
-    border-radius: 50%;
-    position: relative;
-    top: 2rem;
+.banner h2 {
+  color: #02577a;
 }
-section h1 {
-    position: relative;
-    top: 6rem;
-    font-size: 3rem;
-    text-align: center;
+.banner img {
+  border-radius: 50%;
+}
+.socials img {
+  border-radius: 0%;
+  width: 3rem;
+  padding-top: 1rem;
+}
+.banner h1,
+.banner p,
+.bottom p{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+.banner h1 {
+  font-size: 4rem;
+}
+.banner p {
+  font-size: 1.25rem;
+  max-width: 38rem;
+}
+.info a {
+    color: #02577a;
+}
+.info a:hover {
+  text-decoration: underline;
+}
+.nav {
+  display: flex;
+  align-items: center;
+  padding-left: 1%;
+  border-top: 1px black solid;
+  justify-content: center;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+.nav li {
+  display: inline;
+  padding-right: 6rem;
+  padding-left: 6rem;
+}
+.nav a {
+  color: black;
+  font-size: 2rem;
+  font-weight: 100;
+}
+.nav a:hover {
+  color: #02577a;
+}
+.hardware {
+  padding-top: 5rem;
+  background-color: #01303f;
+}
+.hardware h1 {
+  text-align: center;
+  font-size: 5rem;
+  font-weight: 250;
+  color: white;
+}
+.pcbdesign {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+.pcbdesign h3 {
+  color: white;
+  font-size: 2rem;
+  padding-bottom: 2rem;
+  font-weight: 100;
+}
+.pcbdesign p {
+  max-width: 40rem;
+  color: white;
+  line-height: 1.75rem;
+  font-size: 1.125rem;
+}
+.pcb {
+  max-width: 40rem;
+}
+#second {
+  background-color: white;
+}
+#second p,
+#second h3 {
+  color: #01303f;
+}
+.software {
+  padding-top: 5rem;
+}
+.software h1 {
+  text-align: center;
+  font-size: 5rem;
+  font-weight: 250;
+}
+footer {
+  background-color: #000000;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  position: relative;
+  bottom: 0;
+}
+footer p {
+  padding-left: 1%;
+  color: white;
+}
+div.scroll-container {
+  background-color: #333;
+  overflow: auto;
+  white-space: nowrap;
+  padding: 10px;
+}
+
+div.scroll-container img {
+  padding: 10px;
 }
