--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,8 @@ main {
   border-radius: 0%;
   width: 3rem;
   padding-top: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 .banner h1,
 .banner p,
