--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,10 @@ main {
   font-size: 1.25rem;
   max-width: 38rem;
 }
+.banner ul {
+  margin-bottom: 1rem;
+  padding-left: 1rem;
+}
 .info a {
     color: #02577a;
 }
